[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-mcp-agent"
version = "0.1.0"
description = "A LangGraph ReAct agent whose tools are served over the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-mcp-adapters>=0.1.0",
  "mcp>=1.2.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
google = ["langchain-google-genai>=2.0.0"]
openai = ["langchain-openai>=0.2.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
